Fix filename case for music4 in FILES object

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ const FILES = {
   music1: "cue.mp3",
   music2: "cue2.mp3",
   music3: "rony.mp3",
-  music4: "Sony.mp3",
+  music4: "sony.mp3",
   music5: "tony.mp3",
   voice1: "elp.mp3",
   voice2: "ronald.mp3",
